--- a/demo.html
+++ b/demo.html
@@ -144,24 +144,12 @@
       <div class="swiper-wrapper">
 
         <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img src="assets/img/product_0.png" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/product_5.png" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/product_4.png" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/product_1.png" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/product_2.png" />
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/product_3.png" />
-            </div>
+            <div class="swiper-slide"> <img src="assets/img/product_0.png" /> </div>
+            <div class="swiper-slide"> <img src="assets/img/product_5.png" /> </div>
+            <div class="swiper-slide"> <img src="assets/img/product_4.png" /> </div>
+            <div class="swiper-slide"> <img src="assets/img/product_1.png" /> </div>
+            <div class="swiper-slide"> <img src="assets/img/product_2.png" /> </div>
+            <div class="swiper-slide"> <img src="assets/img/product_3.png" /> </div>
         
       </div>
     </div>
