--- a/index.html
+++ b/index.html
@@ -140,11 +140,21 @@
 
                 </div>
 
-                <div class="product-info">
+                <div class="product-info small">
                     <div class="favourite flexc"><i class="fa-solid fa-heart"></i></div>
-                    <h2>Montreal Leather Sofa</h2>
+                    <h2 class="product-title">Montreal Leather Sofa</h2>
 
                     <div class="price">
+                        <p>&pound;649.00</p> 
+                        <span>&pound;949.00</span>
+                    </div>
+                </div>
+
+                <div class="product-info">
+                    <div class="favourite flexc small"><i class="fa-solid fa-heart"></i></div>
+                    <h2 class="product-title small">Montreal Leather Sofa</h2>
+
+                    <div class="price small">
                         <p>&pound;649.00</p> 
                         <span>&pound;949.00</span>
                     </div>
